Buggy z-index: Nest title-skills

--- a/src/front-end/pages/resume/G-main/default-main/default-main.scss
+++ b/src/front-end/pages/resume/G-main/default-main/default-main.scss
@@ -11,6 +11,7 @@
         position: relative;
         transition: transform 0.5s ease-in-out;
         ul {
+          overflow: hidden;
           margin: 0;
           padding: 0;
           width: 100%;
@@ -20,17 +21,16 @@
           transition: opacity 0.25s ease-in-out;
           grid-template: repeat(3, 1fr) / repeat(3, 1fr); //--🠊 grid-template-rows / grid-template-columns 🠈--//
           &.visible {
-            opacity: 1;
+            z-index: 1;
+            // opacity: 1;
           }
           &.hidden {
-            opacity: 0;
-            cursor: default;
+            z-index: 0;
+            // opacity: 0;
           }
           li {
-            cursor: pointer;
             position: relative;
             list-style-type: none;
-            // background: rgba(green, 0.5);
             img {
               position: absolute;
               &:nth-child(1) {
@@ -157,146 +157,16 @@
         }
       }
 
+      // .skills-producer {
+      //   //--🠊 display: flex; 🠈--//
+      //   grid-area: 1 / 1 / 2 / 2; //--🠈 row-start / col-start / row-end / col-end 🠈--//
+      // }
+      // .skills-developer {
+      //   //--🠊 display: flex; 🠈--//
+      //   grid-area: 1 / 2 / 2 / 3; //--🠈 row-start / col-start / row-end / col-end 🠈--//
+      // }
+
       //--|🠉| Build Carousel |🠉|--//
-      /*
-      //--|🠋| Build Carousel |🠋|--//
-      section[class*='carousel'] {
-        //--🠊 display: grid; 🠈--//
-        .navigation-carousel {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          grid-area: 1 / 1 / 2 / 4; //--🠈 row-start / col-start / row-end / col-end 🠈--//
-          .indicator-carousel {
-            width: 15px;
-            height: 15px;
-            margin: 0 0.5rem;
-            cursor: pointer;
-            border-radius: 50%;
-            background: rgba($primary-light, 0.25);
-
-            &.active {
-              cursor: default;
-              background: $primary-light;
-            }
-          }
-        }
-
-        .left-carousel {
-          grid-area: 2 / 1 / 3 / 2; //--🠈 row-start / col-start / row-end / col-end 🠈--//
-        }
-        .right-carousel {
-          grid-area: 2 / 3 / 3 / 4; //--🠈 row-start / col-start / row-end / col-end 🠈--//
-        }
-
-        button[class*='carousel'] {
-          // z-index: 1;
-          cursor: default;
-          color: $primary-light;
-          background: transparent;
-          svg {
-            cursor: pointer;
-          }
-          &.hidden {
-            opacity: 0;
-            cursor: default;
-          }
-        }
-        // button[class*='hidden']
-        .track-carousel {
-          //--🠊 display: grid; 🠈--//
-          overflow: hidden;
-          .track-container {
-            margin: 0;
-            padding: 0;
-            position: relative;
-            //--🠊 display: grid; 🠈--//
-            transition: transform 250ms ease-in;
-            .slide-carousel {
-              width: 100%;
-              height: 100%;
-              display: grid;
-              position: absolute;
-              grid-area: 1 / 2 / 2 / 3; //--🠈 row-start / col-start / row-end / col-end 🠈--//
-              grid-template: repeat(3, 1fr) / repeat(3, 1fr); //--🠊 grid-template-rows / grid-template-columns 🠈--//
-              li[class*='carousel'] {
-                div img {
-                  width: 100%;
-                }
-                div:nth-child(1) {
-                  grid-area: 1 / 1 / 2 / 2;
-                  // background-color: darkred;
-                }
-                div:nth-child(2) {
-                  grid-area: 1 / 2 / 2 / 3;
-                  // background-color: darkgreen;
-                }
-                div:nth-child(3) {
-                  grid-area: 1 / 3 / 2 / 4;
-                  // background-color: darkblue;
-                }
-
-                div:nth-child(4) {
-                  grid-area: 2 / 1 / 3 / 2;
-                  // background-color: red;
-                }
-                div:nth-child(5) {
-                  grid-area: 2 / 2 / 3 / 3;
-                  // background-color: green;
-                }
-                div:nth-child(6) {
-                  grid-area: 2 / 3 / 3 / 4;
-                  // background-color: blue;
-                }
-
-                div:nth-child(7) {
-                  grid-area: 3 / 1 / 4 / 2;
-                  // background-color: pink;
-                }
-                div:nth-child(8) {
-                  grid-area: 3 / 2 / 4 / 3;
-                  // background-color: lightgreen;
-                }
-                div:nth-child(9) {
-                  grid-area: 3 / 3 / 4 / 4;
-                  // background-color: lightblue;
-                }
-              }
-            }
-          }
-        }
-      }
-
-      .carousel-producer {
-        //--🠊 display: grid; 🠈--//
-        grid-area: 2 / 1 / 3 / 2; //--🠈 row-start / col-start / row-end / col-end 🠈--//
-        // background: rgba(darkred, 0.25);
-        
-        //--🠊 border: 4px dashed $pink-neon; 🠈--//
-        //--🠊 background: rgba($pink-dark, 0.25); 🠈--//
-        
-      }
-      .carousel-developer {
-        grid-area: 2 / 2 / 3 / 3; //--🠈 row-start / col-start / row-end / col-end 🠈--//
-        // background: rgba(darkblue, 0.25);
-
-        //--🠊 border: 4px dashed $turquoise-neon; 🠈--//
-        //--🠊 background: rgba($turquoise-dark, 0.25); 🠈--//
-
-      }
-      //--|🠉| Build Carousel |🠉|--//
-
-      //--🠊 display: grid; 🠈--//
-      grid-template: 100px 1fr 100px / repeat(2, 1fr); //--🠊 grid-template-rows / grid-template-columns 🠈--//
-      .skills-producer {
-        //--🠊 display: flex; 🠈--//
-        grid-area: 1 / 1 / 2 / 2; //--🠈 row-start / col-start / row-end / col-end 🠈--//
-      }
-      .skills-developer {
-        //--🠊 display: flex; 🠈--//
-        grid-area: 1 / 2 / 2 / 3; //--🠈 row-start / col-start / row-end / col-end 🠈--//
-      }
-      */
     }
 
     #main-home div {
